# glusterfs

./: Makefile.am  autogen.sh  configure.ac
argp-standalone/: autogen.sh
libglusterfs/src/: syncop.h
libglusterfsclient/src/: Makefile.am  glfs-test.c  libglusterfsclient-mem-types.h  libglusterfsclient.c  libglusterfsclient.h
xlators/mgmt/glusterd/src/: glusterd.c
xlators/mount/fuse/utils/: mount_glusterfs.in
